[tool.poetry]
name = "agent-frontend"
version = "0.1.0"
description = ""
authors = ["8baller <tomrae030@hotmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
open-aea-cli-ipfs = "^1.53.0"
open-aea = "^1.53.0"
tomte = {extras = ["click", "tests"], version = "^0.2.17"}
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
